增加了个人介绍和weibo侧边栏；增加了在首页继续阅读按钮

--- a/source/_posts/2013-09-03-pep-8.markdown
+++ b/source/_posts/2013-09-03-pep-8.markdown
@@ -28,6 +28,8 @@ Guido的主要观点之一是代码更多的时候是用来读的。这篇指南
 
 2.为了与原有代码保持一致（也许是历史原因）-- 虽然这是一个绝佳的机会来收拾别人的烂摊子（真正的XP风格，XP，Xtreme Programming，极限编程）
 
+<!--more-->
+
 ##代码布局
 ###缩进
 使用4个空格来进行每一级的缩进。
